30 October 2023: George
	- Merge #930 from Stuart Henderson: add void to
	  log_ident_revert_to_default declaration.

30 October 2023: Wouter
	- autoconf.

24 October 2023: George
	- Clearer configure text for missing protobuf-c development libraries.

20 October 2023: Wouter
	- Merge #951: Cachedb no store. The cachedb-no-store: yes option is
	  used to stop cachedb from writing messages to the backend storage.
	  It reads messages when data is available from the backend. The
	  default is no.

19 October 2023: Wouter
	- Fix to print detailed errors when an SSL IO routine fails via
	  SSL_get_error.

18 October 2023: George
	- Mailing list patches from Daniel Gröber for DNS64 fallback to plain
	  AAAA when no A record exists for synthesis, and minor DNS64 code
	  refactoring for better readability.
	- Fixes for the DNS64 patches.
	- Update the dns64_lookup.rpl test for the DNS64 fallback patch.
	- Merge #955 from buevsan: fix ipset wrong behavior.
	- Update testdata/ipset.tdir test for ipset fix.

17 October 2023: Wouter
	- Fix #954: Inconsistent RPZ handling for A record returned along with
	  CNAME.

16 October 2023: George
	- Expose the script filename in the Python module environment 'mod_env'
	  instead of the config_file structure which includes the linked list
	  of scripts in a multi Python module setup; fixes #79.
	- Expose the configured listening and outgoing interfaces, if any, as
	  a list of strings in the Python 'config_file' class instead of the
	  current Swig object proxy; fixes #79.
	- For multi Python module setups, clean previously parsed module
	  functions in __main__'s dictionary, if any, so that only current
	  module functions are registered.

13 October 2023: George
	- Better fix for infinite loop when reading multiple lines of input on
	  a broken remote control socket, by treating a zero byte line the
	  same as transmission end. Addesses #947 and #948.

12 October 2023: Wouter
	- Merge #944: Disable EDNS DO.